--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     pbjs.que = pbjs.que || [];
   </script>
   <script type="text/javascript"
-    src="https://banners.adfox.ru/230815/adfox/1675709/f5a1bc16746fb5a557d6495fd5d6dd90_prebid8.9.0.js" async></script>
+    src="prebid9.29.0.js" async></script>
 
   <script>
     pbjs.que.push(function () {
