--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 
         // optional: will default to _pubcid if left blank.
         // If not left blank must match "name" in the the module above
-        sharedIdName: 'novatiq'
+        sharedIdName: 'novatiq',
+        
+        urlParams: {
+          novatiqId: 'zenithid'
+        }
         }
       }
     ],
