--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       {
       name: 'novatiq',
       bidders: [
-        `rubicon`
+        `yandex`
       ],
       params: {
         // change to the Partner Number you received from Novatiq
