--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       ],
       params: {
         // change to the Partner Number you received from Novatiq
-        sourceid: '1a3',
+        sourceid: 'Tej',
 
         // Use the sharedID module
         useSharedId: true,
