--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         sharedIdName: 'novatiq',
         
         urlParams: {
-          novatiqId: 'zenithid'
+          novatiqId: 'sptoken'
         }
         }
       }
