--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <script type="text/javascript"
-    src="prebid9.29.0.js"></script>
+    src="newscript.js"></script>
   <script>
     pbjs.setConfig({
   userSync: {
