--- a/applink.html
+++ b/applink.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-  <a href="https://app.adjust.com/1hrkeex?fallback=https%3A%2F%2Fwww.beymen.com%2Ftr%2Fp_dsquared2-green-wood-edt-100-ml-dus-jeli-100-ml-tiras-sonrasi-balmi-100-ml-erkek-parfum-seti_1611016" target="_blank">
+  <a href="https://app.adjust.com/1hrkeex?campaign=yandex-beymen&idfa=asdfa3a-asgag43-ag-aga&campaign_id=491&creative_id=491&publisher_id=491&ya_click_id=418024&s2s=0&ip_address=123.123.123.123&user_agent=1vasdfagasf&redirect=https%3A%2F%2Fwww.beymen.com%2Ftr%2Fp_dsquared2-green-wood-edt-100-ml-dus-jeli-100-ml-tiras-sonrasi-balmi-100-ml-erkek-parfum-seti_1611016&fallback_lp=https%3A%2F%2Fwww.beymen.com%2Ftr%2Fp_dsquared2-green-wood-edt-100-ml-dus-jeli-100-ml-tiras-sonrasi-balmi-100-ml-erkek-parfum-seti_1611016" target="_blank">
     Открыть в приложении или на сайте
   </a>
 
