--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
               name: "novatiq",
               bidders: [`yandex`],
               params: {
-                sourceid: "Tej",
+                sourceid: "Yyp",
                 useSharedId: true,
                 urlParams: {
                   novatiqId: "sptoken",
